--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -123,3 +123,9 @@ body{
     background-color: rgba(0,0,0,0.5);
     display: none;
 }
+
+.additional-item{
+    font-size: 11px;
+    text-align: left;
+    border: 1px solid #000000;
+}
