--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -133,3 +133,26 @@ body{
     font-size: 20px;
     color: red;
 }
+
+.pro{
+    background-color: royalblue;
+    text-align: center;
+    position: relative;
+    border-radius: 20px;
+}
+
+.pro-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.pro-name{
+    text-align: center;
+    font-size: 18px;
+    color: red;
+}
+
+.pro-status{
+    color: purple;
+}
