--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -156,3 +156,31 @@ body{
 .pro-status{
     color: purple;
 }
+
+.form-wrapper{
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.form-wrapper input,
+.form-wrapper select{
+    display: block;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 30px;
+}
+
+.form-header{
+    font-size: 20px;
+    color: green;
+}
+
+.submit{
+    width: 100%;
+    padding: 10px;
+    background-color: #fff;
+    color: green;
+}
